# globalct-insights

./: .dockerignore  .env.example  POETRY.md  docker-compose.yml  pyproject.toml
.github/agents/: frontend-refactor-agent.md  frontend-refactor.agent.md  refactor-backend.agent.md
.github/prompts/: plan-refactorSessionVerification.prompt.md
.github/workflows/: codeql.yml  docker-publish.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  dependencies.py  logging_config.py  main.py  models.yml
backend/alembic/: env.py
backend/alembic/versions/: 3292c048b57b_initial_migration_create_all_tables.py  4d8bb2faa6f2_initial_migration_with_mapped_column_.py  7f1c3eb2a136_first_init.py  cdebc676097e_added_col_model_provider_to_chat_with_.py
backend/core/: config.py  serializers.py
backend/models/: base.py  chat.py  chat_file.py  chat_message.py  favourite.py  user.py
backend/prompts/: system_prompts.py
backend/routers/: custom_router.py  route.py
backend/routers/api/: auth.py  avatar.py  chat_inference.py  chats.py  favourites.py  messages.py  models.py  users.py
backend/services/: chat_service.py  indexer.py  llm_agent.py  llm_factory.py  memory.py  sql_dump_service.py  tasks.py  tools_initializer.py
backend/services/chat/: chat_service.py  chat_tools.py
backend/services/factory/: llm_factory.py
backend/services/memory/: agent_memory.py
backend/services/migration/: db_migration_manager.py
backend/services/rag/: sql_ingestion.py
backend/services/rag/indexer/: files_indexer.py  vector_store.py
backend/services/rag/pandas/: output_parser.py  pandas_prompt.py  (+1 more)
backend/services/session/: session_service.py
backend/tests/: test_llm_app.py
backend/utils/: __init__.py  check_property.py  jwt.py  upload_sql_dump.py
frontend/: .env.example  Dockerfile  next.config.ts  package.json  types.d.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: AuthProvider.tsx  theme-provider.tsx
frontend/src/lib/: utils.ts
notebooks/: [Demo]Cosine-Similarity.ipynb  [Demo]Next-Tokens.ipynb  [Demo]Self-Attention.ipynb  [Tools]DuckDuckGo-Loader.ipynb  [Tools]Sql-Query-Agent.ipynb  [Tools]URL-Loader.ipynb  [Use-Case-A]Classic-RAG.ipynb  [Use-Case-B]SQL-Queries.ipynb  [Use-Case-C]Excel-Evaluation.ipynb  [Use-Case-D]Text-Extraction.ipynb  [Work-Demo-A]Excel-Evaluation.ipynb  [Work-Demo-B]SQL-Queries.ipynb  requirements.txt
notebooks/archive/: 1.Prototyping.ipynb  2.Prototyping_Chat.ipynb  3.1.HR_With_Pandas[CSV].ipynb  3.2.HR_With_Pandas[EXCEL].ipynb  4.1.Lawyer_Minh[PERSIST].ipynb  4.2.1.Lawyer_Minh[LOAD].ipynb  4.2.2.Lawyer_Minh[LOAD].ipynb  5.1.Lawyer_Reinhard[PERSIST].ipynb  5.2.1.Lawyer_Reinhard[LOAD].ipynb  6.ChromaDB_Indexing_Documents.ipynb  7.1.System_Prompts.ipynb  7.2.Agent_Multiple_Files.ipynb  8.DeepEval.ipynb  [TOOLS]Advanced-Text-To-SQL.ipynb
(+53 files in other folders)
